--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5"
   },
+  "engines": {
+    "npm": "6.2.0",
+    "node": "8.11.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
